@@ -290,7 +290,7 @@ foreach ($contents as $content) {
 		array_push ($table->data, $data);
 		
 		$data = array ();
-		$monitor_value = format_numeric (get_agent_module_sla ($content['id_agent_module'], $content['period'], 1, 1, $datetime));
+		$monitor_value = format_numeric (get_agent_module_sla ($content['id_agent_module'], $content['period'], 1, false, $datetime));
 		$data[0] = '<p style="font: bold 3em Arial, Sans-serif; color: #000000;">';
 		$data[0] .= $monitor_value.' % <img src="images/b_green.png" height="32" width="32" /></p>';
 		$monitor_value2 = format_numeric (100 - $monitor_value, 2) ;
